update to notebook text

--- a/five-cool-things.ipynb
+++ b/five-cool-things.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Five Cool Things in Five Minutes\n",
-    "Using the [Amazon Fine Foods Dataset](https://www.kaggle.com/snap/amazon-fine-food-reviews/), first 100,000 rows."
+    "Using the [Amazon Fine Foods Dataset](https://www.kaggle.com/snap/amazon-fine-food-reviews/), 100,000 row sample.\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/pmbaumgartner/five-cool-things/master?filepath=five-cool-things.ipynb)\n"
    ]
   },
   {
