--- a/five-cool-things.ipynb
+++ b/five-cool-things.ipynb
@@ -7,7 +7,9 @@
     "# Five Cool Things in Five Minutes\n",
     "Using the [Amazon Fine Foods Dataset](https://www.kaggle.com/snap/amazon-fine-food-reviews/), 100,000 row sample.\n",
     "\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/pmbaumgartner/five-cool-things/master?filepath=five-cool-things.ipynb)\n"
+    "\n",
+    "\n",
+    "# [bit.ly/python-5ct](http://bit.ly/python-5ct)"
    ]
   },
   {
@@ -23,20 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Connected: @database-sample.sqlite'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "%sql sqlite:///database-sample.sqlite"
@@ -44,63 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * sqlite:///database-sample.sqlite\n",
-      "Done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = %sql SELECT * from reviews\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * sqlite:///database-sample.sqlite\n",
-      "Done.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>name</th>\n",
-       "        <th>sql</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>ix_reviews_index</td>\n",
-       "        <td>CREATE INDEX &quot;ix_reviews_index&quot;ON &quot;reviews&quot; (&quot;index&quot;)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>reviews</td>\n",
-       "        <td>CREATE TABLE &quot;reviews&quot; (<br>&quot;index&quot; INTEGER,<br>  &quot;Id&quot; INTEGER,<br>  &quot;ProductId&quot; TEXT,<br>  &quot;UserId&quot; TEXT,<br>  &quot;ProfileName&quot; TEXT,<br>  &quot;HelpfulnessNumerator&quot; INTEGER,<br>  &quot;HelpfulnessDenominator&quot; INTEGER,<br>  &quot;Score&quot; INTEGER,<br>  &quot;Time&quot; INTEGER,<br>  &quot;Summary&quot; TEXT,<br>  &quot;Text&quot; TEXT<br>)</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('ix_reviews_index', 'CREATE INDEX \"ix_reviews_index\"ON \"reviews\" (\"index\")'),\n",
-       " ('reviews', 'CREATE TABLE \"reviews\" (\\n\"index\" INTEGER,\\n  \"Id\" INTEGER,\\n  \"ProductId\" TEXT,\\n  \"UserId\" TEXT,\\n  \"ProfileName\" TEXT,\\n  \"HelpfulnessNumerator\" INTEGER,\\n  \"HelpfulnessDenominator\" INTEGER,\\n  \"Score\" INTEGER,\\n  \"Time\" INTEGER,\\n  \"Summary\" TEXT,\\n  \"Text\" TEXT\\n)')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -110,42 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * sqlite:///database-sample.sqlite\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "review_data = %sql SELECT productId, Score FROM reviews ORDER BY productId"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('0006641040', 4),\n",
-       " ('0006641040', 3),\n",
-       " ('0006641040', 5),\n",
-       " ('0006641040', 1),\n",
-       " ('7310172001', 4)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "review_data[0:5]"
    ]
@@ -162,77 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class groupby in module itertools:\n",
-      "\n",
-      "class groupby(builtins.object)\n",
-      " |  groupby(iterable, key=None) -> make an iterator that returns consecutive\n",
-      " |  keys and groups from the iterable.  If the key function is not specified or\n",
-      " |  is None, the element itself is used for grouping.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __next__(self, /)\n",
-      " |      Implement next(self).\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling.\n",
-      " |  \n",
-      " |  __setstate__(...)\n",
-      " |      Set state information for unpickling.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import groupby\n",
+    "from statistics import mean\n",
     "help(groupby)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from statistics import mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('B000ED9L9E', 5, 15)\n",
-      "('B001E6GFKI', 5, 15)\n",
-      "('B002N7DSP2', 5, 15)\n",
-      "('B004UBZBMW', 5, 15)\n",
-      "('B000FKL0D6', 5, 14)\n"
-     ]
-    }
-   ],
    "source": [
     "product_means = []\n",
     "for product, reviews in groupby(review_data, key=lambda x: x[0]):\n",
@@ -258,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,19 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "▁▁▁█\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(generate_sparkline(([1,4,3,2,4])))"
+    "print(generate_sparkline(([1,4,3,4,2,1,2,3,4,3,5,5,3,2,4])))"
    ]
   },
   {
@@ -307,24 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>pre {font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;}</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "HTML(\"\"\"\n",
@@ -340,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,38 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0006641040\t█▁███\n",
-      "\n",
-      "7310172001\t▁▁▁▂█\n",
-      "\n",
-      "7310172101\t▁▁▁▂█\n",
-      "\n",
-      "B00002N8SM\t█▁▂\n",
-      "\n",
-      "B00004CI84\t▂▁▁▂█\n",
-      "\n",
-      "B00004CXX9\t▂▁▂▃█\n",
-      "\n",
-      "B00004RAMS\t█▁▄▁█\n",
-      "\n",
-      "B00004RAMX\t▂▁▂▂█\n",
-      "\n",
-      "B00004RAMY\t▂▁▁▂█\n",
-      "\n",
-      "B00004RBDU\t▂▂▁▂█\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for product, sparkline in product_sparklines[0:10]:\n",
+    "for product, sparkline in product_sparklines[:5]:\n",
     "    print(product, sparkline, sep=\"\\t\")\n",
     "    print()"
    ]
@@ -398,24 +204,32 @@
     "pip install statsmodels\n",
     "```\n",
     "\n",
-    "Basically: I want to sort on number of reviews AND review score.\n",
+    "Basically: **I want to sort on number of reviews AND review score.**\n",
     "\n",
-    "https://www.evanmiller.org/how-not-to-sort-by-average-rating.html\n",
+    "📄 **Good blog post**: https://www.evanmiller.org/how-not-to-sort-by-average-rating.html\n",
     "    \n",
     "> We need to balance the proportion of positive ratings with the uncertainty of a small number of observations. Fortunately, the math for this was worked out in 1927 by Edwin B. Wilson. What we want to ask is: *Given the ratings I have, there is a 95% chance that the “real” fraction of positive ratings is at least what?* "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from statsmodels.stats.proportion import proportion_confint\n",
-    "from statistics import stdev, median\n",
-    "\n",
+    "from statistics import stdev, median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "product_data = []\n",
-    "# We're going to do some extra here because we'll need it for the next part\n",
+    "# We're going to do some extra aggregations here \n",
+    "# because we'll need it for the next part\n",
     "for product, reviews in groupby(review_data, key=lambda x: x[0]):\n",
     "    review_scores = [review[1] for review in reviews]\n",
     "    mean_score = mean(review_scores)\n",
@@ -460,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,35 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80ebf0973736455faf3a3f9d8e356706",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='by', options=('n_ratings', 'mean', 'median', 'stdev', 'p_positive'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "@interact(\n",
+    "    by=[\"n_ratings\", \"mean\", \"median\", \"stdev\", \"p_positive\", \"wilson_score\"],\n",
+    "    descending=[True, False],\n",
+    "    top=(5, 50, 5),\n",
+    ")\n",
     "def product_sorter(by, descending, top=5):\n",
     "    sorted_data = sorted(product_data, key=lambda x: x[by], reverse=descending)[:top]\n",
-    "    print(tabulate(sorted_data, headers=\"keys\", tablefmt=\"grid\"))\n",
-    "\n",
-    "interact(product_sorter,\n",
-    "         by=['n_ratings', 'mean', 'median', 'stdev', 'p_positcive', 'wilson_score'],\n",
-    "         descending=[True, False],\n",
-    "         top=(5, 50, 5));"
+    "    print(tabulate(sorted_data, headers=\"keys\", tablefmt=\"grid\"))"
    ]
   },
   {
@@ -525,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
